Inizializzazione tabella (ancora da ultimare)

--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,19 @@
 .yellow{
     background-color: yellow;
 }
+
+tr{
+    text-align: left;
+}
+
+th{
+    color: white;
+}
+
+thead{
+    background-color: dodgerblue;
+}
+
+.lightblue{
+    background-color:lightskyblue;
+}
