--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,17 @@ h4{
 h3{
     color: white;
 }
+
+#monitor{
+    background-image: url("../img/monitor.jpg");
+    background-repeat: no-repeat;
+    height: 200px;
+    width: auto;
+}
+
+#grafico{
+    background-image: url("../img/graph.jpg");
+    background-repeat: no-repeat;
+    height: 200px;
+    width: auto;
+}
